--- a/public/css/option.css
+++ b/public/css/option.css
@@ -1,4 +1,7 @@
-
+body {
+	width: clamp(60%, 25rem, 100%);
+	margin: auto;
+}
 ul {
 	list-style: none;
 	margin: 3rem;
@@ -13,6 +16,7 @@ ul label span {
 	padding: 1em;
 	color: black;
 	border-radius: 10px;
+	cursor: pointer;
 }
 
 ul label:hover span {
@@ -29,4 +33,14 @@ ul label:hover input:checked ~ span {
 
 ul li{
 	display: inline-block;
+}
+
+button {
+	display: block;
+	margin: auto;
+	cursor: pointer;
+}
+
+h2 {
+	text-align: center;
 }
