--- a/public/css/formation.css
+++ b/public/css/formation.css
@@ -18,7 +18,7 @@ body {
 	transition: 1s;
 }
 
-#search:hover, #search:focus {
+nav:is(:hover, :focus) #search {
 	padding: .2em .5em;
 	min-width: 70%;
 }
