--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,3 +15,19 @@ html, body {
 	margin: 0;
 	border: none;
 }
+
+.main-title {
+	position: relative;
+	overflow-wrap: white-space;
+}
+
+.main-title::before {
+	display: block;
+	content: '';
+	height: 3px;
+	width: 100px;
+	background-color: var(--color-ua);
+	position: absolute;
+	left: -.2em;
+	bottom: 0;
+}
